--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "blake3": "^3.0.0",
+    "blake3-wasm": "^3.0.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
