--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "blake3": "^3.0.0",
-    "blake3-wasm": "^3.0.0",
+    "@noble/hashes": "^1.3.1",
     "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
+    "jquery": "^3.7.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
